# Valkyrie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  valkyrie.hpp
.github/workflows/: release.yml
src/bindings/: dialog.hpp  fs.hpp  net.hpp  os.hpp  socket.hpp  system.hpp
src/cli/: commands.hpp  cross_compile.hpp  main.cpp  main_cli_only.cpp  package.hpp  templates.hpp  utils.hpp
src/core/: app.hpp  ipc.hpp  runtime.hpp  vfs.hpp
